compiler/tests/fail/typing/x86-64/res_wrong_type2.jazz
/* The error should be that the type of "t1" is not compatible with the declared
   return type of function "test3".
   Currently, the error is about returning a reg array in an export function
   (actually in a function that is not inline).
*/
inline fn init (stack u64[2] t1) -> stack u64[2]  
{
  t1[0] = 0;
  t1[1] = 0;
  return t1;
}

export fn test3 () -> stack u64[2]  
{
  reg u64[2] t1;
  t1 = init(t1);
  t1 = init(t1);
  return t1;
}
